Se obtiene el input del usuario

--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
             }
 
             inicializar(){
+                this.elegirColor = this.elegirColor.bind(this)
                 btnEmpezar.classList.add('hide')
-                this.nivel = 8
+                this.nivel = 1
                 this.colores = {
                     celeste,
                     violeta,
@@ -123,6 +124,7 @@
 
             siguienteNivel(){
                 this.iluminarSecuencia()
+                this.agregarEventosClick()
             }
 
             transformarNumeroAColor(numero){
@@ -144,7 +146,6 @@ t
                     const color = this.transformarNumeroAColor(this.secuencia[i])
                     setTimeout(() => this.iluminarColor(color), 1000 * i)
                     
-                    
                 }
             }
 
@@ -155,6 +156,17 @@ t
 
             apagarColor(color){
                 this.colores[color].classList.remove('light')
+            }
+
+            agregarEventosClick(){
+                this.colores.celeste.addEventListener('click', this.elegirColor)
+                this.colores.verde.addEventListener('click', this.elegirColor)
+                this.colores.violeta.addEventListener('click', this.elegirColor)
+                this.colores.naranja.addEventListener('click', this.elegirColor)
+            }
+
+            elegirColor(ev) {
+                console.log(this)
             }
         }
 
